syntax = "proto3";

package infinileap.api;

import "infinileap/api/requests.proto";
import "infinileap/model/memory_descriptor.proto";
import "google/protobuf/empty.proto";

option java_package = "de.hhu.infinileap.daemon.grpc";
option java_multiple_files = true;

service Daemon {

  rpc MemoryInfo (google.protobuf.Empty) returns (infinileap.model.MemoryDescriptor) {}

  rpc Read(infinileap.api.TransferRequest) returns (google.protobuf.Empty) {}

  rpc Write(infinileap.api.TransferRequest) returns (google.protobuf.Empty) {}
}