syntax = "proto3";

package infinileap.api;

option java_package = "de.hhu.infinileap.daemon.grpc";
option java_multiple_files = true;

message ReadRequest {
  int64 peer_handle = 1;
  int64 source_offset = 2;
  int64 remote_offset = 3;
  int64 length = 4;
}

message TransferRequest {
  int64 peer_handle = 1;
  int64 source_offset = 2;
  int64 remote_offset = 3;
  int64 length = 4;
}