syntax = "proto3";

package infinileap.model;

option java_package = "de.hhu.infinileap.daemon.grpc";
option java_multiple_files = true;

message MemoryDescriptor {
  string file_path = 1;
  int64 size = 2;
}